<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExamUpdate"
    android:background="@drawable/border_shadow_white_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"

        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/red_button_circular"
            android:gravity="center"
            android:hint="write the name of the exam"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></EditText>

        <TextView
            android:id="@+id/examDate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/answers_border"
            android:gravity="center"
            android:hint="chose exam date"
            android:onClick="dateSelection"
            android:textColor="@color/dark_purple_them"
            android:textColorHint="@color/dark_purple_them"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleEt"></TextView>

        <TextView
            android:id="@+id/startTimeET"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/answers_border"
            android:gravity="center"
            android:hint="chose start time"
            android:onClick="StartTimeSelection"
            android:textColor="@color/dark_purple_them"
            android:textColorHint="@color/dark_purple_them"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/examDate"></TextView>

        <TextView
            android:id="@+id/EndTimeEt"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/answers_border"
            android:gravity="center"
            android:hint="chose end time"
            android:onClick="EndTimeSelection"
            android:textColor="@color/dark_purple_them"
            android:textColorHint="@color/dark_purple_them"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startTimeET"></TextView>

        <ListView
            android:id="@+id/questions"
            android:layout_width="317dp"
            android:layout_height="381dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/border_shadow_white_background"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EndTimeEt"></ListView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addQuestionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:backgroundTint="@color/dark_purple_them"
            android:onClick="addQuestion"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />


        <Button
            android:onClick="UpdateExam"
            android:text="DONE"
            android:backgroundTint="@color/dark_purple_them"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questions" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>