...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/editQuestion"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/dark_purple_them"
            android:paddingRight="5dp"
            app:icon="@drawable/ic_baseline_edit_24"
            app:iconGravity="textStart"
...
